samples/good/Imports/aml-14-short-custom-name/imports.mf
<imports>
  <package name="ab" path=".\" />
</imports>
