samples/bad/imports-non-package-child/imports.mf
<imports>
  <dependson name="Core" />
</imports>
